[project]
name = "msl-network"
dynamic = ["version"]
dependencies = [
    "pyzmq>=27.1.0",
]
description = "Concurrent and asynchronous network I/O"
license = {file = "LICENSE.txt"}
authors =[
    {name = "Measurement Standards Laboratory of New Zealand", email = "info@measurement.govt.nz"},
]
maintainers = [
    {name = "Joseph Borbely", email = "joseph.borbely@measurement.govt.nz"},
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[project.urls]
Changes = "https://mslnz.github.io/msl-network/latest/release-notes/"
Documentation = "https://mslnz.github.io/msl-network/latest/"
Homepage = "https://mslnz.github.io/msl-network/latest/"
Source = "https://github.com/MSLNZ/msl-network"
Tracker = "https://github.com/MSLNZ/msl-network/issues"

# [project.scripts]
# msl-network = "msl.network.cli:main"

[dependency-groups]
doc = [
    "black>=24.8.0",
    "mike>=2.1.3",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.11.1",
]
lint = [
    "ruff>=0.11.0",
]
test = [
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
type = [
    "basedpyright>=1.28.1",
    "mypy>=1.14.1",
]
dev = [
    {include-group = "doc"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "type"},
    "orjson>=3.10.15",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/msl/network/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/msl"]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--import-mode=importlib",
    "--ignore=src/msl/examples",
    "--ignore=src/msl/network/typing.py",
]
cache_dir = ".cache/pytest"
consider_namespace_packages = true
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.coverage.run]
branch = true
data_file = ".cache/coverage/.coverage"
omit = [
    "src/msl/examples/*",
    "src/msl/network/typing.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pragma: no branch",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
include_namespace_packages = true

[tool.coverage.html]
directory = ".cache/coverage"
title = "MSL-Network coverage report"

[tool.mypy]
cache_dir = ".cache/mypy"
strict = true
strict_bytes = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
allow_redefinition = false
allow_untyped_globals = false
disallow_any_decorated = true
disallow_any_explicit = false # true
disallow_any_expr = false # true
disallow_any_unimported = true
ignore_missing_imports = false
implicit_optional = false
local_partial_types = true
scripts_are_modules = true
warn_no_return = true
warn_unreachable = true

[tool.basedpyright]
failOnWarnings = true
typeCheckingMode = "recommended"
useLibraryCodeForTypes = false
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/_version.py",
]
reportAny = false
reportExplicitAny = false

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120
exclude = [
    ".cache",
    ".git",
    ".github",
    ".venv",
    "build",
    "dist",
    "venv",
    "src/msl/network/_version.py"
]
namespace-packages = ["src/msl"]
target-version = "py38"

[tool.ruff.lint.isort]
known-first-party = ["msl.network"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ANN401", # any-type
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
    "INP001", # implicit-namespace-package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
